--- a/package.json
+++ b/package.json
@@ -11,12 +11,11 @@
   "license": "MIT",
   "repository": "https://github.com/toddmotto/ultimate-angular-master-seed",
   "dependencies": {
-    "angular": "^1.6.1",
+    "angular": "1.5.0",
     "angular-loading-bar": "^0.9.0",
     "angular-messages": "^1.6.1",
     "angular-ui-router": "1.0.0-beta.2",
     "angularfire": "^2.0.2",
-    "d3": "^4.10.0",
     "firebase": "3.3.0"
   },
   "devDependencies": {
