--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "angular": "1.5.9",
     "angular-loading-bar": "^0.9.0",
     "angular-messages": "^1.6.1",
+    "angular-resource": "^1.4.4",
     "angular-ui-router": "1.0.0-beta.2",
     "angularfire": "^2.0.2",
     "firebase": "3.3.0"
