--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "firebase": "3.3.0"
   },
   "devDependencies": {
-    "angular-mocks": "^1.5.8",
+    "angular-mocks": "1.5.11",
     "babel-core": "^6.11.4",
     "babel-preset-es2015": "^6.9.0",
     "browser-sync": "^2.14.0",
